fix: remove quotes in Front Matter

--- a/docs/views/dev/2019-03-23-当我们说起 MVC 时，我们在谈什么.md
+++ b/docs/views/dev/2019-03-23-当我们说起 MVC 时，我们在谈什么.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "当我们说起 MVC 时，我们在谈什么"
+title: 当我们说起 MVC 时，我们在谈什么
 date: 2019-03-23
-author: "Hivol"
+author: Hivol
 categories:
     - 开发部
 tags:
