--- a/docs/views/dev/2019-03-31-如何利用 GitHub 进行团队协作开发.md
+++ b/docs/views/dev/2019-03-31-如何利用 GitHub 进行团队协作开发.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "如何利用 GitHub 进行团队协作开发"
+title: 如何利用 GitHub 进行团队协作开发
 date: 2019-03-31
-author: "Hivol"
+author: Hivol
 categories:
     - 开发部
 tags:
