--- a/docs/views/data/基于逻辑回归的分类预测.md
+++ b/docs/views/data/基于逻辑回归的分类预测.md
@@ -22,7 +22,7 @@
 >
 > 实际处理一般取$z = \omega_0+\sum_i^n{w_ix_i}$
 >
-> <img src="../imgs/2020/10/30/Sigmoid.png" width="50%">
+> <img src="../imgs/2010/30/Sigmoid.png" width="50%" align="left">
 
 
 
