--- a/docs/views/data/基于逻辑回归的分类预测.md
+++ b/docs/views/data/基于逻辑回归的分类预测.md
@@ -22,11 +22,11 @@
 >
 > 实际处理一般取$z = \omega_0+\sum_i^n{w_ix_i}$
 >
-> <img src="../imgs/2010/30/Sigmoid.png" width="50%" align="left">
+> 
 >
-> 函数图像如上
+> 函数图像如下
 
-
+<img src="../imgs/2010/30/Sigmoid.png" width="50%" align="left">
 
 Logistic回归主要用于分类问题，可以处理二分类和多分类问题
 
@@ -133,11 +133,5 @@ plt.show()
 
 ​	对于一些库的函数比较生疏，内置的变量和方法都比较懵逼，以后要多上手练习，多做实战项目
 
-seanborn
-np.ravel()
-sklearn.metrics
-pyplot.annotate()
-pyplot.lengd()
-pyplot.figure()
-pyplot.contour([X, Y],Z, [levels], **kwargs)
+
 
