--- a/docs/views/dev/2020-11-8-页面设计初体验.md
+++ b/docs/views/dev/2020-11-8-页面设计初体验.md
@@ -1,3 +1,16 @@
+---
+layout:     post
+title:      页面设计初体验
+date:       2020-11-08
+author:     RongJ
+categories:
+    - 开发部
+tags:
+    - 页面设计
+    - HTML+CSS
+    - 前端
+---
+
 # 页面设计初体验
 
 ## 1.设计思路
