修复错误，调整格式

--- a/docs/views/dev/2019-05-12-vuex详解.md
+++ b/docs/views/dev/2019-05-12-vuex详解.md
@@ -1,47 +1,49 @@
 ---
-layout:     post
-title:      vuex详解
-date:       2019-05-12
-author:     Cathandra
+layout: post
+title: vuex详解
+date: 2019-05-12
+author: Cathandra
 categories:
-    - 开发部
+  - 开发部
 tags:
-    - 前端
-    - Vue.js
+  - 前端
+  - Vue.js
 ---
-上周跟着慕课网的视频复习了vuex，虽然大致过了一遍vuex的模式，但其实对这个组件的细节理解并不到位。  
-这次就参考vuex官方文档，结合上次的demo，仔细对相关功能做理解。
 
-首先引用别人的总结。简言之：  
->`state`属性存储状态值、`getter`属性获取状态值、`mutation`提供改变状态的方法、`action`属性接收对应的指令，去`mutation`中执行。
+上周跟着慕课网的视频复习了 vuex，虽然大致过了一遍 vuex 的模式，但其实对这个组件的细节理解并不到位。  
+这次就参考 vuex 官方文档，结合上次的 demo，仔细对相关功能做理解。
 
-这是上周demo的store.js文件。
+首先引用别人的总结。简言之：
+
+> `state`属性存储状态值、`getter`属性获取状态值、`mutation`提供改变状态的方法、`action`属性接收对应的指令，去`mutation`中执行。
+
+这是上周 demo 的 store.js 文件。
 
 ```js
 //store.js
-import Vue from 'vue'
-import Vuex from 'vuex'
+import Vue from "vue";
+import Vuex from "vuex";
 
-Vue.use(Vuex)
+Vue.use(Vuex);
 
 export default new Vuex.Store({
   state: {
     count: 0
   },
   mutations: {
-    increase () {
-      this.state.count += 1
+    increase() {
+      this.state.count += 1;
     }
   }
-})
+});
 ```
 
 ## state
 
->state属性存储状态值。
+> state 属性存储状态值。
 
-在根组件注册store之后，可以在组件中通过`store.state.count`访问state中的参数。  
-在本案例中，state非常简单，就是点击数`count`。
+在根组件注册 store 之后，可以在组件中通过`store.state.count`访问 state 中的参数。  
+在本案例中，state 非常简单，就是点击数`count`。
 
 ```js
 //store.js
@@ -54,14 +56,14 @@ export default new Vuex.Store({
 })
 ```
 
-这个值被放在About页面的`{{ msg }}`中展示：
+这个值被放在 About 页面的`{{ msg }}`中展示：
 
 ```html
 <!--about.vue-->
 <template>
-    ...
-    <p>Info page has been clicked by {{msg}} times in this session.</p>
-    ...
+  ...
+  <p>Info page has been clicked by {{msg}} times in this session.</p>
+  ...
 </template>
 <script>
     ...
@@ -75,17 +77,17 @@ export default new Vuex.Store({
 
 ## getter
 
->getter属性获取状态值。
+> getter 属性获取状态值。
 
-在需要对参数进行计算时，可以通过在store中定义getter，使state中派生出其他状态。  
+在需要对参数进行计算时，可以通过在 store 中定义 getter，使 state 中派生出其他状态。  
 案例中没有涉及。
 
 ## mutation
 
->mutation提供改变状态的方法。
+> mutation 提供改变状态的方法。
 
-mutation用于修改store的状态。提交mutation后，vue监控到数据的变化，随后动态更新节点。
-在本案例中，通过`this.state.count`调用state，并在mutation中每次增加1。
+mutation 用于修改 store 的状态。提交 mutation 后，vue 监控到数据的变化，随后动态更新节点。
+在本案例中，通过`this.state.count`调用 state，并在 mutation 中每次增加 1。
 
 ```js
 //store.js
@@ -102,9 +104,9 @@ export default new Vuex.Store({
 
 ## action
 
->action属性接收对应的指令，去mutations中执行。
+> action 属性接收对应的指令，去 mutations 中执行。
 
-注意Action提交的是mutation，而不是直接变更状态。  
+注意 Action 提交的是 mutation，而不是直接变更状态。  
 案例中没有涉及，也举个例子吧。
 
 ```js
@@ -119,7 +121,6 @@ export default new Vuex.Store({
 })
 ```
 
-
 ## 参考资料
 
-- [Vuex官方文档](https://vuex.vuejs.org/zh/)
+- [Vuex 官方文档](https://vuex.vuejs.org/zh/)
