--- a/docs/views/dev/2020-01-16-Vue中使用axios异步加载数据.md
+++ b/docs/views/dev/2020-01-16-Vue中使用axios异步加载数据.md
@@ -4,23 +4,23 @@ title: Vue中使用axios异步加载数据
 date: 2020-01-16
 author: Cathandra
 categories:
-    - 开发部
-tags: 
-    - 前端
-    - Vue.js
+  - 开发部
+tags:
+  - 前端
+  - Vue.js
 ---
 
-主要归纳2种用法：  
+主要归纳 2 种用法：
 
-1. 直接使用原生axios；
+1. 直接使用原生 axios；
 
-2. 使用vue-axios组件；
+2. 使用 vue-axios 组件；
 
 <!-- More -->
 
-## 直接使用原生axios
+## 直接使用原生 axios
 
-### 安装axios
+### 安装 axios
 
 使用`npm`安装：
 
@@ -34,9 +34,9 @@ npm install axios --save
 yarn add axios
 ```
 
-### 引用axios
+### 引用 axios
 
-首先，axios是不能够像普通的[vue-resource](https://cn.vuejs.org/v2/guide/plugins.html)插件一样，通过在主入口文件引入`import VueResource from vue-resource`后就使用`Vue.use(VueResource)`全局引用。
+首先，axios 是不能够像普通的[vue-resource](https://cn.vuejs.org/v2/guide/plugins.html)插件一样，通过在主入口文件引入`import VueResource from vue-resource`后就使用`Vue.use(VueResource)`全局引用。
 
 #### 在页面引用
 
@@ -45,18 +45,18 @@ yarn add axios
 
 ```html
 <script>
-import http from 'axios'
+  import http from "axios";
 </script>
 ```
 
-#### 改写为Vue的原型属性
+#### 改写为 Vue 的原型属性
 
-在主入口文件`main.js`中引用，然后挂在vue的原型链上：
+在主入口文件`main.js`中引用，然后挂在 vue 的原型链上：
 
 ```html
 <script>
-import axios from 'axios'
-Vue.prototype.http= axios
+  import axios from "axios";
+  Vue.prototype.http = axios;
 </script>
 ```
 
@@ -64,24 +64,25 @@ Vue.prototype.http= axios
 
 ### 创建实例
 
-#### GET方法
+#### GET 方法
 
-写DEMO的时候，我在`/public`文件夹下放了一个`data.json`文件。所以请求路径就是`'/data.json'`。  
+写 DEMO 的时候，我在`/public`文件夹下放了一个`data.json`文件。所以请求路径就是`'/data.json'`。  
 读取数据时，使用`response.data`。
 
 ```html
 <script>
-export default {
-  mounted() {
-    http.get('/data.json')
-    .then(res => {
-      console.log(res.data);
-    })
-    .catch(err => {
-      console.log(err);
-    })
-  }
-}
+  export default {
+    mounted() {
+      http
+        .get("/data.json")
+        .then(res => {
+          console.log(res.data);
+        })
+        .catch(err => {
+          console.log(err);
+        });
+    }
+  };
 </script>
 ```
 
@@ -100,23 +101,24 @@ export default {
     .catch(err => {});
 ```
 
-#### POST方法
+#### POST 方法
 
 ```html
 <script>
-http.post('/data', {
-        params: {
-            title: 'test'
-        }
-  })
+  http
+    .post("/data", {
+      params: {
+        title: "test"
+      }
+    })
     .then(res => {})
     .catch(err => {});
 </script>
 ```
 
-## 使用vue-axios组件
+## 使用 vue-axios 组件
 
-### 安装vue-axios
+### 安装 vue-axios
 
 使用`npm`安装：
 
@@ -130,7 +132,7 @@ npm i vue-axios
 yarn add vue-axios
 ```
 
-### 引用vue-axios
+### 引用 vue-axios
 
 在主入口文件`main.js`中引用：
 
@@ -143,31 +145,31 @@ Vue.use(VueAxios, axios);
 
 ### 创建实例
 
-#### GET方法
+#### GET 方法
 
 仍旧是在`/public`文件夹下放了一个`data.json`文件。
 
 ```html
 <script>
-export default {
-  mounted() {
-    this.axios
-    .get('/data.json')
-    .then(res => {
-      console.log(res.data);
-    })
-    .catch(err => {
-      console.log(err);
-    })
-  }
-}
+  export default {
+    mounted() {
+      this.axios
+        .get("/data.json")
+        .then(res => {
+          console.log(res.data);
+        })
+        .catch(err => {
+          console.log(err);
+        });
+    }
+  };
 </script>
 ```
 
 ## 参考资料
 
-1. [axios中文网](http://www.axios-js.com/zh-cn/docs/index.html#%E4%BB%80%E4%B9%88%E6%98%AF-axios%EF%BC%9F)
+1. [axios 中文网](http://www.axios-js.com/zh-cn/docs/index.html#%E4%BB%80%E4%B9%88%E6%98%AF-axios%EF%BC%9F)
 
 2. [vue-axios](https://github.com/imcvampire/vue-axios)
 
-3. [axios在vue中的使用 - 慕课网](https://www.imooc.com/learn/1152)
+3. [axios 在 vue 中的使用 - 慕课网](https://www.imooc.com/learn/1152)
