--- a/docs/views/dev/2020-11-08-HTML实例-表格学习.md
+++ b/docs/views/dev/2020-11-08-HTML实例-表格学习.md
@@ -1,15 +1,15 @@
 ---
-
+layout: post
 data: 2020-11-8
 title: HTML table布局学习
 author: zsy
 categories:
-    - 开发部
-tags:
-    -HTML table布局学习
+  - 开发部
+tags: -HTML table布局学习
 ---
 
 # 表格的标签
+
 ## 常用标签
 
 ```
@@ -17,9 +17,10 @@ tags:
 <tr>
 <td>
 <th>
-<col> 
+<col>
 <colgroup>
 ```
+
 ### 示例
 
 ```
@@ -40,10 +41,13 @@ tags:
 ```
 
 ## 合并
+
 合并单元格时，合并行使用：colspan=“2”； 合并列使用：rowspan=“2” （这里的 ‘2’ 表明合并两个单元格）
 
 ### 示例
-* 合并行单元格(codpan)
+
+- 合并行单元格(codpan)
+
 ```
 <table border="1">
 <caption>通讯录</caption>
@@ -60,7 +64,8 @@ tags:
 
 ```
 
-* 合并列单元格（rowspan）
+- 合并列单元格（rowspan）
+
 ```
 <table border="1">
 <tr>
@@ -82,15 +87,19 @@ tags:
 ```
 
 ## 格式设置
+
 ### 单元格的边框
+
 通过设置"border"属性的值来改变边框
-* 普通边框
+
+- 普通边框
+
 ```
 <table border="1">
 <tr>
   <td>First</td>
   <td>Row</td>
-</tr>   
+</tr>
 <tr>
   <td>Second</td>
   <td>Row</td>
@@ -98,27 +107,30 @@ tags:
 </table>
 
 ```
-* 加粗边框
+
+- 加粗边框
+
 ```
 <table border="8">
 <tr>
   <td>First</td>
   <td>Row</td>
-</tr>   
+</tr>
 <tr>
   <td>Second</td>
   <td>Row</td>
 </tr>
 </table>
 ```
-* 特粗边框
+
+- 特粗边框
 
 ```
 <table border="15">
 <tr>
   <td>First</td>
   <td>Row</td>
-</tr>   
+</tr>
 <tr>
   <td>Second</td>
   <td>Row</td>
@@ -127,9 +139,10 @@ tags:
 ```
 
 ### 单元格的对齐
+
 在对应的标签上增加 align 键值(center,left,right)，生效方式为"就近原则"。
 
-* “就近原则”：下方“男的”单元格“left”生效
+- “就近原则”：下方“男的”单元格“left”生效
 
 ```
 <table width="300" border="2">
@@ -141,24 +154,29 @@ tags:
 ```
 
 ### 单元格的边距（cellpadding）
+
 ```
 <table width="600" border="2" cellpadding="8">
 
 ```
 
 ### 单元格间的距离（cellspacing）
+
 ```
 <table width="600" border="2" cellspacing="8">
 ```
 
 ### 单元格背景色、图片
+
 在单元格的标签上增加 bgcolor 或者 background，就可以添加背景色或者背景图片
 
 ```
 <td align="left" bgcolor='red' >
 ```
+
 ### 表格背景色、图片
-在表格的标签上增加bgcolor 或者 background，就可以添加背景色或者背景图片
+
+在表格的标签上增加 bgcolor 或者 background，就可以添加背景色或者背景图片
 
 ```
 <table width="600" border="2" background="pictures\transparent.jpg">
@@ -166,10 +184,13 @@ tags:
 ```
 
 # 表格的嵌套
+
 ## 两张表格的嵌套
+
 ### 示例
 
-* 一行三列的表格
+- 一行三列的表格
+
 ```
 <table border="1" width="100%">
 	<tr>
@@ -178,14 +199,15 @@ tags:
 			<tr>
 			<td>**</td>
 			<td align="center">**</td>
-			<td align="right">**</td>    
+			<td align="right">**</td>
 			</tr>
 		    </table>
 		</td>
     </tr>
 </table>
 ```
-*一张父表格，两张子表格1
+
+\*一张父表格，两张子表格 1
 
 ```
 <table border=6 bordercolor="##00FFFF" width="100%">
@@ -194,7 +216,7 @@ tags:
      <table border=5 bordercolor=#ffcc00 width="100%" height=200>
        <tbody><tr><td></td></tr></tbody>
      </table>
-     
+
      <table border=5 bordercolor=#ffcc00 width="100%" height=200>
         <tbody><tr><td></td></tr></tbody>
      </table>
@@ -203,7 +225,7 @@ tags:
  </table>
 ```
 
-*一张父表格，两张子表格2
+\*一张父表格，两张子表格 2
 
 ```
 <TABLE borderColor=#ccffcc width="100%" border=4>
@@ -222,7 +244,3 @@ tags:
    </tr></tbody>
  </table>
 ```
-
-
-
-
