--- a/docs/views/dev/2020-11-08-页面设计初体验.md
+++ b/docs/views/dev/2020-11-08-页面设计初体验.md
@@ -1,14 +1,14 @@
 ---
-layout:     post
-title:      页面设计初体验
-date:       2020-11-08
-author:     RongJ
+layout: post
+title: 页面设计初体验
+date: 2020-11-08
+author: RongJ
 categories:
-    - 开发部
+  - 开发部
 tags:
-    - 页面设计
-    - HTML+CSS
-    - 前端
+  - 页面设计
+  - HTML+CSS
+  - 前端
 ---
 
 # 页面设计初体验
@@ -31,15 +31,15 @@ tags:
 ## 3.部分代码解析
 
 ```css
-<style type="text/css"> 
+<style type="text/css">
  /*内部CSS，用于将CSS应用于单个文档或者页面，会影响页面所有元素，写在html头部的style标签中*/
-    .center{           
+    .center{
     /*class选择器；如果需要在HTML元素中设置CSS样式，则需要设置id或者class选择器*/
     /*class选择器格式为“.xx”；id选择器格式为“#xx”*/
         font-size: 16px;       /*font-size规定文本的字体尺寸*/
         text-align: center;    /*text-align规定文本的水平对齐方式，此处为居中*/
     }
-    
+
     .p1{
         color: white;
         line-height: 1px;    /*设置段落间间距，但一般设置间距时不使用line-height*/
@@ -67,27 +67,38 @@ tags:
 
 ```html
 <p class="center">front-end development</p>
-/*<p>段落标签</p>，class="center"表示该段落中的元素具有".center"中的CSS样式*/
+/*
+<p>段落标签</p>
+，class="center"表示该段落中的元素具有".center"中的CSS样式*/
 ```
 
 ```html
-<div class="one">    /*<div>盒子模型</div>*/
-    <h3 style="color: lightgreen">Easy</h3> 
-     /*内联CSS，用于单个行或元素，设置了该行文字的颜色*/
-    To use BEM,you only need to employ
-    BEM's naming convention
+<div class="one">
+  /*
+  <div>盒子模型</div>
+  */
+  <h3 style="color: lightgreen">Easy</h3>
+  /*内联CSS，用于单个行或元素，设置了该行文字的颜色*/ To use BEM,you only need
+  to employ BEM's naming convention
 </div>
 ```
 
 ```html
-<p class="p1"><u><i>semantic custom tags?</i></u></p><br>
-<p style="color: white;font-size: 12px">Look for answers in the awesome<u>FAQ list</u></p>
-/*多个标签的叠用。同时使用了<u></u>下划线标签、<i></i>斜体标签还有<p></p>段落标签*/
+<p class="p1">
+  <u><i>semantic custom tags?</i></u>
+</p>
+<br />
+<p style="color: white;font-size: 12px">
+  Look for answers in the awesome<u>FAQ list</u>
+</p>
+/*多个标签的叠用。同时使用了<u></u>下划线标签、<i></i>斜体标签还有
+<p></p>
+段落标签*/
 ```
 
 ```html
 <div class="two" style="background-color: indianred">
-     xxxxxxxxxx
+  xxxxxxxxxx
 </div>
 /*一个盒子里面设计独有的CSS样式，也可以用“公用”的样式*/
 ```
@@ -107,4 +118,3 @@ tags:
 2.[LIDIHUO-立地货](https://www.lidihuo.com/css/css-how-to-add.html)
 
 3.[W3school](https://www.w3school.com.cn/index.html)
-
