--- a/docs/views/dev/2020-11-01-Markdown入门.md
+++ b/docs/views/dev/2020-11-01-Markdown入门.md
@@ -1,16 +1,16 @@
 ---
-layout:     post
-title:      Markdown入门篇
-date:       2020-11-1
-author:     RongJ
+layout: post
+title: Markdown入门篇
+date: 2020-11-1
+author: RongJ
 categories:
-    - 开发部
+  - 开发部
 tags:
-    - Markdown
-    - 博客
+  - Markdown
+  - 博客
 ---
 
-# Markdown标题篇
+# Markdown 标题篇
 
 ## 1.第一种方法：
 
@@ -33,23 +33,28 @@ tags:
 
 效果如下：
 
---------
+---
 
 # 一级标题
 
 ## 二级标题
+
 ### 三级标题
+
 #### 四级标题
+
 ##### 五级标题
+
 ###### 六级标题
 
-# Markdown段落篇
+# Markdown 段落篇
 
 ## 1.段落格式
 
 ```
 Markdown中段落没有特殊格式，但是不同编译器换行格式不同。如Typora中直接用ENTER键换行，而Atom中需要在一段的最后使用“两个以上的空格+ENTER键”才能换行，否则内容编译出来会在一段中。
 ```
+
 ## 2.字体格式
 
 ```
@@ -66,14 +71,14 @@ ___粗斜体文字___
 
 效果如下：
 
---------------
+---
 
-*斜体文本*
+_斜体文本_
 _斜体文本_
 **粗体文本**
-__粗体文字__
-***粗斜体文字***
-___粗斜体文字___
+**粗体文字**
+**_粗斜体文字_**
+**_粗斜体文字_**
 
 ## 3.分隔线
 
@@ -90,12 +95,15 @@ ___粗斜体文字___
 
 效果如下：
 
-***
-
-* * *
 ---
-- - -
-------
+
+---
+
+---
+
+---
+
+---
 
 ## 4.删除线：
 
@@ -108,7 +116,7 @@ Markdown
 
 效果如下：
 
--------
+---
 
 Markdown
 ~~Markdown~~
@@ -123,7 +131,7 @@ Markdown
 
 效果如下：
 
----------
+---
 
 <u>带下划线</u>
 
@@ -138,11 +146,11 @@ Markdown
 
 效果如下：
 
------
+---
 
 Rabbit[^1]
 
-[^1]:Rabbit为融酱的库名
+[^1]: Rabbit 为融酱的库名
 
 ## 7.注释
 
@@ -154,13 +162,13 @@ Rabbit[^1]
 
 效果如图:
 
------
+---
 
 注释<!--123-->
 
 注释<!---->
 
-# Markdown代码篇
+# Markdown 代码篇
 
 ## 1.片段：
 
@@ -170,24 +178,20 @@ Rabbit[^1]
 `int main(){
      int a=0;
      a+=1;
-     printf("a=%d",a);     
+     printf("a=%d",a);
 }`
 ```
 
 效果如下：
 
------
+---
 
-`pow(double x,double y)` x的y次方
-`int main(){
-     int a=0;
-     a+=1;
-     printf("a=%d",a);     
-}`
+`pow(double x,double y)` x 的 y 次方
+`int main(){ int a=0; a+=1; printf("a=%d",a); }`
 
 ## 2.代码区块：
 
-```
+````
 方法1：代码区块的开头用4个空格或者用一个Tab键。
 
 方法2：代码两端分别加上```，可以指定语言，也可不指定。
@@ -195,24 +199,24 @@ Rabbit[^1]
 int main(){
      int a=0;
      a+=1;
-     printf("a=%d",a);     
+     printf("a=%d",a);
 }
 ​```
-```
+````
 
 效果如下：
 
-----
+---
 
 ```
 int main(){
      int a=0;
      a+=1;
-     printf("a=%d",a);     
+     printf("a=%d",a);
 }
 ```
 
-# 补充之HTML的标签使用<br>
+# 补充之 HTML 的标签使用<br>
 
 ```
 不在Markdown涵盖内的标签，可以直接在文档中用HTML编写。
@@ -231,7 +235,7 @@ int main(){
 
 效果如下：
 
----------------
+---
 
 <center>居中</center>
 **<center>加粗居中</center>**<br>
@@ -239,5 +243,4 @@ int main(){
 <font Size=1>我是一号字</font><br>
 <font color=#008B8B>哈喽！</font><br>
 
-本文参考[RUNOOB.COM](https://www.runoob.com/markdown/md-tutorial.html)&[HTML标签](https://www.lidihuo.com/html/html-tags-kbd.html)
-
+本文参考[RUNOOB.COM](https://www.runoob.com/markdown/md-tutorial.html)&[HTML 标签](https://www.lidihuo.com/html/html-tags-kbd.html)
