201102-数据分析专题(二) 探索性数据分析-sean
详细的数据分析教程, 每周更新中...

--- a/docs/views/data/2020-11-13-数据分析专题(二) 探索性数据分析.md
+++ b/docs/views/data/2020-11-13-数据分析专题(二) 探索性数据分析.md
@@ -247,7 +247,7 @@ df[df.Age.isnull()]
     plt.show()
       ```
 
-  ![Cabin_isnull](..\imgs\2011\02\sean\Cabin_isnull.png)
+  ![Cabin_isnull](../imgs/2011/02/sean/Cabin_isnull.png)
   
 - 插补法
   - 平均值, 众数
@@ -461,7 +461,7 @@ df[df.Age.isnull()]
    ```
 
 
-![Fare_scatter](..\imgs\2011\02\sean\Fare_scatter.png)
+![Fare_scatter](../imgs/2011/02/sean/Fare_scatter.png)
 
 3. 箱线图法
 
@@ -480,7 +480,7 @@ df[df.Age.isnull()]
    ```
 
 
-![boxplot](..\imgs\2011\02\sean\boxplot.png)
+![boxplot](../imgs/2011/02/sean/boxplot.png)
 
 ##### 异常值处理方法:
 
