--- a/docs/views/data/2020-11-14-python循环语句.md
+++ b/docs/views/data/2020-11-14-python循环语句.md
@@ -1,16 +1,17 @@
+---
 layout: post
-title: python基本语法
-date: 2020-11-
+title: 2020-11-14-python循环语句
+date: 2020-11-14
 author: ABU601
 categories:
+    - 数据分析部
+tags:
+    - python
+---
 
-- 数据分析部
 
-  tags:
 
-- python
-
-  ## while循环语句补充
+## while循环语句补充
 
 1. while循环的基本形式：
    while判断条件（condition）
@@ -43,37 +44,26 @@ categories:
        print("count"+"大于5")
    ```
 
-   ## For循环
+## For循环
 
-   1.   for循环的一般形式为:
+   1. for循环的一般形式为:
 
    for（单次表达式；条件表达式；末尾循环体)
 
    {
 
    中间循环体
-
    }
-
-   2. 表达式均可省略，但分号不可省略。因为";"可以代表一个空语句，省略了之后语句会减少，语句格式发生了变化，编译器会无法识别而无法进行编译。
-
-   3. 单次表达式：不参与循环，可作为某一变量的初始化赋值语句。  条件表达式：条件表达式为循环的正式开端，执行中间循环体。执行的中间循环体可以为一个或多个语句。  末尾循环体：执行末尾循环体再次进行条件判断。若条件成立，重复循环，不成立则结束循环。
-
-   4. for循环执行顺序:
-
-      a. 执行初始化语句
-
-      b.执行条件判断句，观察结果为true还是false
-
-      c. 如果是false,循环结束。如果是true,继续执行。
-
-      d. 执行条件语句，执行控制条件语句。
-
-      e. 回到B结束
-
-      举例如下：
-
-      ```python
+  2. 表达式均可省略，但分号不可省略。因为";"可以代表一个空语句，省略了之后语句会减少，语句格式发生了变化，编译器会无法识别而无法进行编译。
+  3.  单次表达式：不参与循环，可作为某一变量的初始化赋值语句。  条件表达式：条件表达式为循环的正式开端，执行中间循环体。执行的中间循环体可以为一个或多个语句。  末尾循环体：执行末尾循环体再次进行条件判断。若条件成立，重复循环，不成立则结束循
+  4.  for循环执行顺序:
+    a. 执行初始化语句
+    b.执行条件判断句，观察结果为true还是false
+    c. 如果是false,循环结束。如果是true,继续执行。
+     d. 执行条件语句，执行控制条件语句。
+     e. 回到B结束
+     举例如下：
+     ```python
       ## 使用for循环
       for letter in 'python':
           print ('当前字母：', letter)
@@ -81,8 +71,6 @@ categories:
       for fruit in fruits:
           print ('当前水果：', fruit)
           输出结果:
-      ```
-
       当前字母： p
       当前字母： y
       当前字母： t
@@ -92,23 +80,16 @@ categories:
       当前水果： banana
       当前水果： apple
       当前水果： mango
-
-     5. range函数的for循环range是一个函数，大多用于for循环中。两种形式：
-         range(stop)或range(start,stop,[step]) (具体内容参见上节博客)。举例如下:      
-
-```python
-## 使用for循环
+ 5.  range函数的for循环range是一个函数，大多用于for循环中。两种形式：
+         range(stop)或range(start,stop,[step]) (具体内容参见上节博客)。举例如下:
 for(i) in range(1,45):
     print(i)
-```
 
 ## python循环嵌套
 
-1.  python语言允许在一个循环体内嵌入另一个循环体。当两个或多个循环结构相互嵌套时，位于外层的循环结构称为外层循环或外循环，位于内层的循环称为内层循环或内循环。
+1. python语言允许在一个循环体内嵌入另一个循环体。当两个或多个循环结构相互嵌套时，位于外层的循环结构称为外层循环或外循环，位于内层的循环称为内层循环或内循环。
 2. 循环嵌套类型：a. while循环中嵌套while       b. for循环中嵌套for循环。    c. while中镶嵌for循环。    d. for循环中镶嵌着while循环
-3.  while循环嵌套：外部循环满足之后，开始执行属于外循环的内循环。内循环执行完毕后，如果仍然还满足外部循环，则外部循环再次执行，直到跳出循环。也就是说，当内层循环与外层循环的循环条件全为False时，整个镶嵌循环才算执行完毕。举例如下：
-
-   
+3. while循环嵌套：外部循环满足之后，开始执行属于外循环的内循环。内循环执行完毕后，如果仍然还满足外部循环，则外部循环再次执行，直到跳出循环。也就是说，当内层循环与外层循环的循环条件全为False时，整个镶嵌循环才算执行完毕。举例如下：
 
 ```python
 i=2
@@ -133,8 +114,4 @@ while (i < 10):
 7 是素数
 8 是素数
 9 是素数
-
-4. for嵌套循环：while循环是在条件不成立时停止循环，for循环是在序列穷尽时停止循环。
-
-   
-
+4.  for嵌套循环：while循环是在条件不成立时停止循环，for循环是在序列穷尽时停止循环。
