20201115-爬取药监局企业信息-Nemo5749

--- a/docs/views/data/2020-10-30-基于逻辑回归的分类预测.md
+++ b/docs/views/data/2020-10-30-基于逻辑回归的分类预测.md
@@ -1,6 +1,14 @@
-| layout | title                  | date       | author | categories | tags     |
-| ------ | ---------------------- | ---------- | ------ | ---------- | -------- |
-| post   | 基于逻辑回归的分类预测 | 2020-10-30 | 周奕莲 | 数据分析组 | 机器学习 |
+---
+layout: post
+title: 爬取药监局网站中企业的备案信息
+date: 2020-11-15
+author: 周奕莲
+categories:
+  - 数据分析部
+tags:
+  - 爬虫
+---
+
 
 ## 基于逻辑回归的分类预测
 
