--- a/docs/views/data/2020-11-15-爬取药监局企业信息.md
+++ b/docs/views/data/2020-11-15-爬取药监局企业信息.md
@@ -1,7 +1,13 @@
-| layout |             title              |    date    | author | categories | tags |
-| ------ | :----------------------------: | :--------: | ------ | ---------- | ---- |
-| post   | 爬取药监局网站中企业的备案信息 | 2020-11-15 | 周奕莲 | 数据分析组 | 爬虫 |
-
+---
+layout: post
+title: 爬取药监局网站中企业的备案信息
+date: 2020-11-15
+author: 周奕莲
+categories:
+  - 数据分析部
+tags:
+  - 爬虫
+---
 
 
 ## 爬取药监局网站中企业的备案信息
