--- a/docs/views/data/2020-10-30-基于逻辑回归的分类预测.md
+++ b/docs/views/data/2020-10-30-基于逻辑回归的分类预测.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 爬取药监局网站中企业的备案信息
+title: 基于逻辑回归的分类预测
 date: 2020-11-15
 author: 周奕莲
 categories:
@@ -9,42 +9,35 @@ tags:
   - 爬虫
 ---
 
-
 ## 基于逻辑回归的分类预测
 
-**案例来源于[data science workshop](https://developer.aliyun.com/ai/scenario/9ad3416619b1423180f656d1c9ae44f7)**  
+**案例来源于[data science workshop](https://developer.aliyun.com/ai/scenario/9ad3416619b1423180f656d1c9ae44f7)**
 
-本文主要是使用sklearn 鸢尾花（iris）数据集进行的多分类逻辑回归当中实践过程的思路整理
+本文主要是使用 sklearn 鸢尾花（iris）数据集进行的多分类逻辑回归当中实践过程的思路整理
 
 ### 逻辑回归简要介绍
 
-> Logistic分布是一种连续型概率分布，其分布函数为
+> Logistic 分布是一种连续型概率分布，其分布函数为
 >
 > $F(x)=P(X\leq x) = \frac{1}{1+e^{-\frac{(x-\mu)}{\gamma}}}$
 >
-> Sigmoid函数为
+> Sigmoid 函数为
 >
 > $f(z) = \frac{1}{1+e^{-z}}$
 >
-> Sigmoid函数为 $\mu=0$，$\gamma=1$时的特殊的Logistic函数
+> Sigmoid 函数为 $\mu=0$，$\gamma=1$时的特殊的 Logistic 函数
 >
 > 实际处理一般取$z = \omega_0+\sum_i^n{w_ix_i}$
->
-> 
 
+Logistic 回归主要用于分类问题，可以处理二分类和多分类问题
 
-
-Logistic回归主要用于分类问题，可以处理二分类和多分类问题
-
-对于函数会取一个边界值，当大于这个值会分类为，小于这个值会分类为0，由此形成一个决策边界（Decision Boundary)，再决策边界之上就分类为1，反之分类为0
-
-
+对于函数会取一个边界值，当大于这个值会分类为，小于这个值会分类为 0，由此形成一个决策边界（Decision Boundary)，再决策边界之上就分类为 1，反之分类为 0
 
 ### 数据读取
 
-项目开始前一般要先调库，此处使用numpy, matplotlib, seaborn, sklearn, pandas
+项目开始前一般要先调库，此处使用 numpy, matplotlib, seaborn, sklearn, pandas
 
-这里使用sklearn内置的数据集训练
+这里使用 sklearn 内置的数据集训练
 
 ```python
 from sklearn.datasets import load_iris
@@ -52,8 +45,6 @@ data = load_iris()
 iris_target = data.target
 iris_features = pd.DataFrame(data=data.data,columns=data.feature_names)
 ```
-
-
 
 ### 数据特征描述
 
@@ -71,8 +62,6 @@ pd.Series(iris_target).value_counts()
 ##观察数据的一些统计特征
 iris_feature.describle()
 ```
-
-
 
 ### 数据预处理
 
@@ -92,8 +81,6 @@ from sklean.model_selection import train_test_split
 x_tran,x_test,y_train,y_test = train_test_split(iris_features,iris_target,test_size=0.3,random_state = 2021)
 ```
 
-
-
 ### 模型训练
 
 ```python
@@ -105,20 +92,16 @@ clf.fit(x_train,y_train)
 test_predict = clf.predict(x_test)
 ```
 
-
-
 ### 模型评测
 
-使用metrics的准确度评估模型效果
+使用 metrics 的准确度评估模型效果
 
 ```python
 ## metrcis在sklearn库中
 metrcis.accuracy_score(y_test,test_predict)
 ```
 
-
-
-查看预测结果的混淆矩阵，*用热力图对于结果进行可视化
+查看预测结果的混淆矩阵，\*用热力图对于结果进行可视化
 
 ```python
 confusion_matrix_result = metric.confusion_matrix(test_predict,y_test)
@@ -131,13 +114,6 @@ plt.ylabel('这是一个无情的纵轴')
 plt.show()
 ```
 
-
-
-
-
 **个人心得：**
 
-​	对于一些库的函数比较生疏，内置的变量和方法都比较懵逼，以后要多上手练习，多做实战项目
-
-
-
+​ 对于一些库的函数比较生疏，内置的变量和方法都比较懵逼，以后要多上手练习，多做实战项目
