2020-11-01-java自定义异常类-1228229783

--- a/docs/views/dev/2020-11-01-java自定义异常类.md
+++ b/docs/views/dev/2020-11-01-java自定义异常类.md
@@ -1,8 +1,8 @@
 ---
 layout:     post
 title:      java自定义异常类
-date:       2020-11-02
-author:     赵奇文
+date:       2020-11-01
+author:     1228229783
 categories:
     - 开发部
 tags:
