2021-11-17-使用fiddler爬取小程序数据-13safa

--- a/docs/views/dev/2021-11-17-使用fiddler爬取小程序数据.md
+++ b/docs/views/dev/2021-11-17-使用fiddler爬取小程序数据.md
@@ -1,3 +1,18 @@
+---
+layout: post
+title: JSP页面元素以及request对象
+date: 2021-11-08
+author: 13safa
+categories:
+  - 开发部
+tags:
+  - fiddler
+  - 爬虫
+  - 后端
+  - 服务器
+
+---
+
 # 使用fiddler爬取小程序数据
 
 ----
