--- a/docs/views/data/2021-11-08-week1学习内容.md
+++ b/docs/views/data/2021-11-08-week1学习内容.md
@@ -1,4 +1,3 @@
-```
 ---
 layout: post
 title: week1学习内容
@@ -10,11 +9,8 @@ tags:
     - 数据分析
     - Python
 ---
-```
 
-## Week1
-
-python：
+## python：
 
 1. pandas
 
