--- a/元组与字典.md
+++ b/元组与字典.md
@@ -23,7 +23,6 @@ item[0]=12
 items=(1,[1,2,34],'asdas',(1,2,'a'))
 print(items[1])
 items[1].append(12)
-items.insert('zsy',1)
 print(items[1])
 print(items)
 """
@@ -91,6 +90,32 @@ print(alien_0)
 {'color': 'green', 'points': 5, 'name': '0号'}
 {'points': 5, 'name': '0号'}
 '''
+```
+
+## 字典的遍历
+```python
+user_0 = {
+'username': 'efermi',
+'first': 'enrico',
+'last': 'fermi',
+}
+
+#  遍历所有键
+for key in user_0:  #法一
+    print(key)
+for key in user_0.keys():  #法二
+    print(key)
+
+#  遍历所有值
+for value in user_0.values():
+    print(value)
+
+#  遍历所有键值对
+for key, value in user_0.items():
+    print("Key=",key)
+    print("Value=",value)
+
+#当然也可以通过遍历键的方式，来完成键值对或值的遍历
 ```
 
 ## 扩展
