--- a/docs/views/data/2021-11-16-python基础知识.md
+++ b/docs/views/data/2021-11-16-python基础知识.md
@@ -8,8 +8,6 @@ categories:
 tags:
     - python
 ---
-#### 输入和打印 ： 
-输入和赋值为同一步骤，且变量的类型为输入值的类型，同时，在输入的同时加上引号还可以打印字符串。  
 
     例如：
     temp=input("猜猜我心里想的是哪个数字"),  
@@ -21,21 +19,16 @@ tags:
     其用法与 input 基本相同。
 
 #### 变量赋值和字符串：
- 变量赋值格式： 变量名 = 赋值内容（可以是常量，表达式，之前出现过的变量），字符串相加会变成拼接的形式，  
 
     例如：a = 'A'+'B'
         打印：AB  
-当字符串中间要出现单引号或双引号时需要加转义字符 \    
 
         例如：'Let \'s go'
         打印：Let's go  
 
-如需要输出的内容中需要有 \ 的出现，
-第一可以用原始字符串：在字符串前加上一个 r   
 
         例如：a = r'C:\now'
         打印：C:\now
-此方法可解决多个 \ 的输出，但最后一个字符不能是 \
         第二可以再 \ 后面直接加转义字符 \  
 
         例如：a = 'C:\\now'
@@ -50,13 +43,11 @@ tags:
           经世济民，
           孜孜以求。
 
-#### 条件分支:
 
     if  条件 :
         条件符合时执行的语句
     else :
         条件不符合时执行的语句
-注意：在冒号换行后必须要缩进才代表条件成立时需要执行的所有语句。
 连续的条件分支可写成：
 
     if  条件1 :
@@ -66,7 +57,6 @@ tags:
     条件表达式：x  if  条件  else y
     意为如果条件成立，就返回x，不成立，就返回y。
 
-#### 循环语句：
 
     while 循环的格式
         while  条件 :
@@ -75,25 +65,18 @@ for 循环的格式
 
     for  目标(变量) in  表达式（字符串，元组，列表，字典等）：循环体
 
-#### 类型转换（str 字符串 ，int 整形 ，float 浮点型）：
-
-类型 (内容)
 
     例如：a=5.99
          b=int (a)
     打印：b=5
 
-#### 获取类型的信息：
 
-+ type ()    例如： a=5.2
                        type (a)
                     打印：class' float '
 
-+ isinstance ()  例如： a='西财'
                         isinstance(a,str)
                     打印：true
     
-#### 函数：
 
  random.randint()表示返回一个随机的整数
 
@@ -101,11 +84,9 @@ for 循环的格式
 
  range([start,] stop [,step])
 
- + 括号中有三个参数，其中用[]括起来的表示参数可选
 
- + step = 1 表示默认值是1
+ ###step = 1 表示默认值是1
 
-+ range()的作用是生成一个从start 参数开始到stop参数的值结束的数字序列
 
     例1：range(5)    
     打印：0~4中的任意一个整数 
