--- a/动态规划题解---状态压缩.md
+++ b/动态规划题解---状态压缩.md
@@ -67,14 +67,19 @@ public:
         for (auto& kv: cache) {
             cnt.push_back(kv.second);
         }
-
-        int m=quantity.size(),n=cnt.size();
-        vector<int> sum(1<<m,0);
-        for(int j=0;j<(1<<m);j++){
-            for(int i=0;i<m;i++){
-                if(1<<i & j != 0) sum[j]+=quantity[i];
+        
+        int n = cnt.size(), m = quantity.size();
+        vector<int> sum(1 << m, 0);
+        for (int i = 1; i < (1 << m); i++) {
+            for (int j = 0; j < m; j++) {
+                if ((i & (1 << j)) != 0) {
+                    int left = i - (1 << j);
+                    sum[i] = sum[left] + quantity[j];
+                    break;
+                }
             }
         }
+    }
 };
 
 ```
@@ -103,10 +108,10 @@ public:
         for (auto& kv: cache) {
             cnt.push_back(kv.second);
         }
-
-        int m=quantity.size(),n=cnt.size();
-        vector<int> sum(1<<m,0);
-                for (int i = 1; i < (1 << m); i++) {
+        
+        int n = cnt.size(), m = quantity.size();
+        vector<int> sum(1 << m, 0);
+        for (int i = 1; i < (1 << m); i++) {
             for (int j = 0; j < m; j++) {
                 if ((i & (1 << j)) != 0) {
                     int left = i - (1 << j);
@@ -115,32 +120,31 @@ public:
                 }
             }
         }
-        //上面代码同上
-        //--------------------------------------------------------
-        vector<vector<bool>> dp(n,vector<bool>(1<<m,0));
-        for(int j=0;j<(1<<m);j++){
-            dp[0][j]= cnt[0]>=sum[j];
+        
+        vector<vector<bool>> dp(n, vector<bool>(1 << m, false));
+        for (int i = 0; i < n; i++) {
+            dp[i][0] = true;
         }
-
-        for(int i=1;i<cnt.size();i++){
-            for(int j=0;j<(1<<m);j++){
-                if(dp[i-1][j]==true){
-                    dp[i][j]=true;
+        for (int i = 0; i < n; i++) {
+            for (int j = 0; j < (1 << m); j++) {
+                if (i > 0 && dp[i-1][j]) {
+                    dp[i][j] = true;
                     continue;
                 }
-
-                //一种快速穷举子集的方法：s=((s - 1) & j)
-                for(int s=j;j>0; s=((s - 1) & j) ){
-                    if(dp[i-1][j-s] && cnt[i]>= sum[s]){
-                        dp[i][j]=true;
+                for (int s = j; s != 0; s = ((s - 1) & j)) { // 子集枚举，详见 https://oi-wiki.org/math/bit/#_14
+                    int prev = j - s; // 前 i-1 个元素需要满足子集 prev = j-s
+                    bool last = (i == 0) ? (prev == 0): dp[i-1][prev]; // cnt[0..i-1] 能否满足子集 prev
+                    bool need = sum[s] <= cnt[i]; // cnt[i] 能否满足子集 s
+                    if (last && need) {
+                        dp[i][j] = true;
                         break;
                     }
                 }
             }
         }
-
         return dp[n-1][(1<<m)-1];
     }
 };
+
 
 ```
